Fri Oct  4 15:47:06 2002  Manish Singh  <yosh@gimp.org>

	* gtkbbox.[ch] gtkhbbox.[ch] gtkhscale.[ch] gtkscale.[ch]
	gtkvscale.[ch] gtkvbbox.[ch]: Deprecation cleanup

Fri Oct  4 15:05:19 2002  HideToshi Tajima  <hidetoshi.tajima@sun.com>

	* modules/input/gtkimcontextxim.c (get_ic_real): Fix memory
	intilization error caused by my previous checkin.
	#94908 a patch from famao@momonga-linux.org (Motonobu Ichimura)
	
Fri Oct  4 17:13:03 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c: Improve checks on public entry points,
	including, among other things checking whether drag
	contexts passed in are source or dest. (Fixes
	#76762, Alexey A. Malyshev)

	* tests/testtext.c tests/testgtk.c tests/testdnd.c:
	Fix uninstalled operation for new pixbuf changes.

	* gtk/stock-icons/Makefile.am (pixbuf_csource): 
	Fix makefile for uninstalled operation.

Fri Oct  4 21:21:47 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkhandlebox.c (gtk_handle_box_paint): remove unused
	codepath.

	* gtk/gtkmenuitem.c (gtk_real_menu_item_{de,}select): call 
	gtk_widget_queue_draw() instead of gtk_widget_draw().

Fri Oct  4 14:49:04 2002  Owen Taylor  <otaylor@redhat.com>

	Patch from Shivram U <shivaram.upadhyayula@wipro.com>
 
  	* gdk/x11/gdkkeys-x11.c (update_keymaps): Increased the keycount to
 	(max_keycode - min_keycode) + 1 from (max_keycode - min_keycode).
 	(update_keymaps), (gdk_keymap_get_entries_for_keyval) looping through
 	less than or equal to max_keycode. (#79184)

2002-10-04  jacob berkman  <jacob@ximian.com>

	* gdk/x11/gdkscreen-x11.c (init_xinerama_support): make legal C

Fri Oct  4 12:05:27 2002  Owen Taylor  <otaylor@redhat.com>

	* demos/Makefile.am (pixbuf_csource): Fix envars
	for uninstalled operation of gdk-pixbuf

	* demos/Makefile.am (test-inline-pixbufs.h): Remove
	output on failure.

Fri Oct  4 12:00:10 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkscreen.c (gdk_screen_class_init): Get the
	name right.
